# function-plotter

./: FunctionPlotGenerator.cpp  FunctionPlotGenerator.hpp  main.cpp  meson.build
res/shaders/: basic.shader
